Fixes countries list parsing and overflow with long country names

--- a/src/main/java/assets/css/sso/signup.css
+++ b/src/main/java/assets/css/sso/signup.css
@@ -50,6 +50,10 @@
   }
 }
 
+#countryIdButton {
+  overflow-x: hidden;
+}
+
 #countryIdDropdown {
   max-height: 350px;
   min-width: 500px;
